[package]
name = "spanner_client_rs"
version = "0.1.0"
authors = ["Donovan Preston <donovanpreston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["compat"] }
googleapis-raw = { version = "0", path = "vendor/googleapis-raw" }
protobuf = "2.12.0"
grpcio = "0.5"

[[bin]]
name = "test"
